--- a/index.html
+++ b/index.html
@@ -208,16 +208,38 @@
             max-height: 600px;
         }
 
+        /* Animation keyframes for the flip */
+        @keyframes flipToBack {
+            from {
+                transform: rotateY(0deg);
+            }
+            to {
+                transform: rotateY(180deg);
+            }
+        }
+
+        @keyframes flipToFront {
+            from {
+                transform: rotateY(180deg);
+            }
+            to {
+                transform: rotateY(0deg);
+            }
+        }
+
         .flip-card {
             position: relative;
             width: 100%;
             height: 100%;
-            transition: transform 0.8s cubic-bezier(0.68, -0.55, 0.265, 1.55);
             transform-style: preserve-3d;
         }
 
         .flip-card.flipped {
-            transform: rotateY(180deg);
+            animation: flipToBack 0.8s ease-in-out forwards;
+        }
+
+        .flip-card.unflipped {
+            animation: flipToFront 0.6s ease-in-out forwards;
         }
 
         .flip-card-front,
@@ -232,10 +254,10 @@
             justify-content: center;
             align-items: center;
             text-align: center;
-            padding: 30px;
+            padding: 20px;
             border-radius: 20px;
             box-sizing: border-box;
-            overflow: hidden;
+            overflow: auto;
         }
 
         .flip-card-front {
@@ -268,15 +290,21 @@
         }
 
         .cloze-text {
-            font-size: 22px;
-            line-height: 1.6;
+            font-size: 20px;
+            line-height: 1.8;
             font-weight: 500;
             color: white;
             text-shadow: 0 2px 8px rgba(0, 0, 0, 0.3);
             word-break: break-word;
-            max-width: 100%;
+            max-width: 95%;
             overflow-wrap: break-word;
-            padding: 0 10px;
+            padding: 0 15px;
+            white-space: normal;
+            text-align: center;
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: center;
+            gap: 4px;
         }
 
         .cloze-blank {
@@ -1051,8 +1079,11 @@
 
                 const card = this.cards[this.currentCardIndex];
 
-                // Reset flip state FIRST, before rendering
-                this.flipCard.classList.remove('flipped');
+                // Remove animation classes and reset to initial state
+                this.flipCard.classList.remove('flipped', 'unflipped');
+
+                // Force reflow to reset animation state
+                void this.flipCard.offsetHeight;
 
                 // Clear input and comparison display
                 this.userAnswerInput.value = '';
