--- a/index.html
+++ b/index.html
@@ -348,6 +348,8 @@
             display: flex;
             flex-direction: column;
             gap: 8px;
+            align-items: center;
+            justify-content: center;
         }
 
         .answer-input {
