Improve mobile layout handling for keyboard and viewport changes
Mobile improvements:
- Changed card height from 70vh to fixed 450px on mobile (prevents keyboard collapse)
- Added overflow-y: auto with -webkit-overflow-scrolling for smooth scrolling
- Set study-container min-height to 100vh for full viewport coverage
- Rating buttons now use flex: 1 to distribute evenly across width
- Added proper margins and gaps for better spacing with keyboard
- Reduced padding on mobile for more usable space
- Added -webkit-overflow-scrolling for smooth momentum scrolling on iOS

iOS-specific improvements:
- Added @supports rule to maintain 16px font size on iOS (prevents auto-zoom)
- Better card spacing to accommodate keyboard appearance
- Improved comparison section max-width for mobile viewports

These changes prevent layout collapse when mobile keyboard appears/disappears.

--- a/index.html
+++ b/index.html
@@ -370,6 +370,13 @@
             box-shadow: 0 4px 12px rgba(0, 0, 0, 0.15);
         }
 
+        /* Prevent iOS auto-zoom on input focus */
+        @supports (-webkit-touch-callout: none) {
+            .answer-input {
+                font-size: 16px;
+            }
+        }
+
         .answer-input::placeholder {
             color: rgba(255, 255, 255, 0.5);
         }
@@ -647,38 +654,73 @@
                 font-size: 28px;
             }
 
+            .study-container {
+                padding: 10px;
+                min-height: 100vh;
+            }
+
             .flip-card-container {
-                max-height: 500px;
-                height: 70vh;
+                max-height: 450px;
+                height: 450px;
+                margin: 10px auto;
             }
 
             .flip-card-front,
             .flip-card-back {
-                padding: 20px;
+                padding: 15px;
+                overflow-y: auto;
+                -webkit-overflow-scrolling: touch;
+            }
+
+            .card-content {
+                gap: 15px;
             }
 
             .cloze-text {
                 font-size: 18px;
+                max-width: 90%;
+            }
+
+            .answer-input-wrapper {
+                gap: 10px;
+                margin-top: 10px;
             }
 
             .answer-input {
                 max-width: 280px;
                 font-size: 14px;
+                padding: 12px 16px;
+            }
+
+            .check-answer-btn {
+                max-width: 280px;
+                font-size: 14px;
+                padding: 12px 16px;
             }
 
             .rating-buttons {
-                max-width: 280px;
+                max-width: 100%;
+                gap: 8px;
+                margin-top: 10px;
+                width: 100%;
             }
 
             .rating-btn {
-                min-height: 65px;
+                min-height: 60px;
                 font-size: 10px;
+                flex: 1;
             }
 
             .study-footer {
                 flex-wrap: wrap;
-                padding: 15px;
+                padding: 10px;
                 gap: 8px;
+                font-size: 12px;
+            }
+
+            .comparison-section {
+                max-width: 90%;
+                margin: 10px auto;
             }
         }
 
