--- a/index.html
+++ b/index.html
@@ -644,7 +644,7 @@
             background: rgba(255, 255, 255, 0.2);
         }
 
-        /* Mobile Responsive */
+        /* Mobile Responsive - Dynamic viewport handling */
         @media (max-width: 640px) {
             #profile-screen {
                 padding: 15px;
@@ -656,13 +656,19 @@
 
             .study-container {
                 padding: 10px;
-                min-height: 100vh;
+                width: 100%;
+                display: flex;
+                flex-direction: column;
+                gap: 10px;
             }
 
             .flip-card-container {
-                max-height: 450px;
-                height: 450px;
-                margin: 10px auto;
+                width: 100%;
+                height: auto;
+                max-height: none;
+                margin: 0;
+                aspect-ratio: 9 / 16;
+                min-height: 400px;
             }
 
             .flip-card-front,
@@ -670,57 +676,77 @@
                 padding: 15px;
                 overflow-y: auto;
                 -webkit-overflow-scrolling: touch;
+                display: flex;
+                flex-direction: column;
+                justify-content: flex-start;
+            }
+
+            .card-label {
+                font-size: 11px;
+                margin-bottom: 10px;
+                flex-shrink: 0;
             }
 
             .card-content {
-                gap: 15px;
+                gap: 12px;
+                overflow-y: auto;
+                -webkit-overflow-scrolling: touch;
+                flex: 1;
             }
 
             .cloze-text {
-                font-size: 18px;
-                max-width: 90%;
+                font-size: 16px;
+                max-width: 100%;
+                line-height: 1.5;
+                word-break: break-word;
             }
 
             .answer-input-wrapper {
                 gap: 10px;
-                margin-top: 10px;
+                width: 100%;
+                margin-top: auto;
+                padding: 10px 0;
             }
 
             .answer-input {
-                max-width: 280px;
-                font-size: 14px;
-                padding: 12px 16px;
+                width: 100%;
+                max-width: 100%;
+                font-size: 16px;
+                padding: 12px;
             }
 
             .check-answer-btn {
-                max-width: 280px;
+                width: 100%;
+                max-width: 100%;
                 font-size: 14px;
-                padding: 12px 16px;
+                padding: 12px;
+            }
+
+            .comparison-section {
+                width: 100%;
+                max-width: 100%;
+                margin: 10px 0;
             }
 
             .rating-buttons {
-                max-width: 100%;
+                display: grid;
+                grid-template-columns: 1fr 1fr;
                 gap: 8px;
-                margin-top: 10px;
                 width: 100%;
+                margin: 0;
+                padding: 10px;
             }
 
             .rating-btn {
                 min-height: 60px;
                 font-size: 10px;
-                flex: 1;
             }
 
             .study-footer {
-                flex-wrap: wrap;
+                width: 100%;
                 padding: 10px;
-                gap: 8px;
-                font-size: 12px;
-            }
-
-            .comparison-section {
-                max-width: 90%;
-                margin: 10px auto;
+                gap: 5px;
+                font-size: 11px;
             }
         }
 
