--- a/index.html
+++ b/index.html
@@ -678,7 +678,6 @@
 
             .flip-card-front,
             .flip-card-back {
-                padding: 15px;
                 display: flex;
                 flex-direction: column;
                 justify-content: flex-start;
@@ -686,11 +685,13 @@
             }
 
             .flip-card-front {
+                padding: 5px 15px 15px 15px;
                 overflow-y: auto;
                 -webkit-overflow-scrolling: touch;
             }
 
             .flip-card-back {
+                padding: 5px 15px 15px 15px;
                 overflow: hidden;
             }
 
@@ -701,7 +702,7 @@
             }
 
             .card-content {
-                gap: 10px;
+                gap: 5px;
                 flex: 1;
                 display: flex;
                 flex-direction: column;
@@ -719,10 +720,10 @@
             }
 
             .answer-input-wrapper {
-                gap: 10px;
+                gap: 6px;
                 width: 100%;
-                margin-top: auto;
-                padding: 10px 0;
+                margin-top: 8px;
+                padding: 0;
             }
 
             .answer-input {
