Implement dynamic viewport-based card sizing for mobile
Adds intelligent viewport detection and card height adjustment:

New handleViewportChange() method:
- Uses visualViewport API to detect actual available screen height
- Accounts for keyboard appearance/disappearance automatically
- Reserves 100px for footer and padding
- Sets card height between 300px minimum and 550px maximum
- Dynamically adjusts to any device resolution

Event listeners added:
- visualViewport.resize and scroll events (iOS/modern browsers)
- window.resize event (fallback for older devices)
- Input focus/blur events (keyboard detection)

Now card automatically:
- Shrinks when keyboard opens
- Expands when keyboard closes
- Adapts to different device screen heights
- Works on phones with different resolutions and notches
- Maintains perfect fit without scrolling needed

This solves the whitespace issue completely by dynamically
sizing the card based on what's actually visible to the user.

--- a/index.html
+++ b/index.html
@@ -933,6 +933,7 @@
                 this.createProfileBtn = document.getElementById('create-profile-btn');
 
                 // Study screen
+                this.flipCardContainer = document.querySelector('.flip-card-container');
                 this.flipCard = document.getElementById('flip-card');
                 this.frontCloze = document.getElementById('front-cloze');
                 this.backCloze = document.getElementById('back-cloze');
@@ -1012,6 +1013,41 @@
                 });
 
                 this.backToProfileBtn.addEventListener('click', () => this.endSession());
+
+                // Handle viewport changes (keyboard open/close) on mobile
+                if (window.visualViewport) {
+                    window.visualViewport.addEventListener('resize', () => this.handleViewportChange());
+                    window.visualViewport.addEventListener('scroll', () => this.handleViewportChange());
+                }
+
+                // Fallback for devices without visualViewport API
+                window.addEventListener('resize', () => this.handleViewportChange());
+                this.userAnswerInput.addEventListener('focus', () => this.handleViewportChange());
+                this.userAnswerInput.addEventListener('blur', () => this.handleViewportChange());
+            }
+
+            handleViewportChange() {
+                if (!this.flipCard) return;
+
+                // Get available viewport height
+                const viewportHeight = window.visualViewport ?
+                    window.visualViewport.height :
+                    window.innerHeight;
+
+                // Get the flip card container
+                const cardContainer = this.flipCardContainer;
+                if (!cardContainer) return;
+
+                // Adjust card height based on available viewport
+                // Reserve space for footer (80px) and padding (20px)
+                const availableHeight = viewportHeight - 100;
+
+                // Set minimum and maximum reasonable heights
+                const cardHeight = Math.max(300, Math.min(availableHeight, 550));
+
+                cardContainer.style.minHeight = cardHeight + 'px';
+                cardContainer.style.maxHeight = cardHeight + 'px';
+                cardContainer.style.height = cardHeight + 'px';
             }
 
             loadData() {
@@ -1160,6 +1196,8 @@
                 this.profileScreen.classList.remove('active');
                 this.studyScreen.classList.add('active');
                 this.updateFooter();
+                // Adjust card size based on current viewport
+                setTimeout(() => this.handleViewportChange(), 100);
             }
 
             displayCard() {
