--- a/index.html
+++ b/index.html
@@ -663,22 +663,22 @@
                 width: 100%;
                 display: flex;
                 flex-direction: column;
-                height: 100dvh;
+                min-height: 100dvh;
                 background: #000;
-                overflow: hidden;
+                overflow-y: auto;
+                -webkit-overflow-scrolling: touch;
             }
 
             .flip-card-container {
                 width: 100%;
-                flex: 1;
+                flex: 0 0 auto;
                 margin: 0;
-                min-height: 0;
                 display: flex;
+                min-height: calc(100dvh - 120px);
             }
 
             .flip-card {
                 width: 100%;
-                height: 100%;
                 display: flex;
             }
 
@@ -687,10 +687,7 @@
                 display: flex;
                 flex-direction: column;
                 width: 100%;
-                height: 100%;
-                overflow-y: scroll;
-                -webkit-overflow-scrolling: touch;
-                padding: 10px 15px;
+                padding: 15px;
             }
 
             .card-label {
@@ -934,6 +931,7 @@
                 this.createProfileBtn = document.getElementById('create-profile-btn');
 
                 // Study screen
+                this.flipCardContainer = document.querySelector('.flip-card-container');
                 this.flipCard = document.getElementById('flip-card');
                 this.frontCloze = document.getElementById('front-cloze');
                 this.backCloze = document.getElementById('back-cloze');
@@ -1185,6 +1183,11 @@
                 this.renderClozeText(card.text, this.frontCloze, true);
                 // Render back card
                 this.renderClozeText(card.text, this.backCloze, false);
+
+                // Scroll card into view
+                setTimeout(() => {
+                    this.flipCardContainer.scrollIntoView({ behavior: 'smooth', block: 'start' });
+                }, 50);
 
                 // Focus input for next answer
                 this.userAnswerInput.focus();
